@@ -17,6 +17,7 @@ Version 0.11
   * Clojure
   * POV-Ray scene files
   * Sqlite3 interactive console sessions
+  * Scala source files, thanks to Krzysiek Goj
 
 - Lexers improved:
   * C lexer highlights standard library functions now and supports
